Add pattern specs for parameters
